FIND_PACKAGE(PNG 1.2.9 REQUIRED)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
# external library: zlib (mandatory)

FIND_PACKAGE(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

FIND_PACKAGE(Freetype REQUIRED)
IF(FREETYPE_FOUND)
	INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
	SET(FREETYPE_FLAGS "-DUSE_FREETYPE")
ELSE(FREETYPE_FOUND)
	SET(FREETYPE_FLAGS "-DNO_FREETYPE")
	SET(FREETYPE_LIBRARIES "")
ENDIF(FREETYPE_FOUND)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FREETYPE_FLAGS}")


FIND_PACKAGE(miniz CONFIG REQUIRED)
FIND_PACKAGE(tinyxml2 CONFIG REQUIRED)

FIND_PACKAGE(any_container CONFIG REQUIRED)

INCLUDE_DIRECTORIES(${any_container_include_dirs})


FIND_PACKAGE(shape_drawer CONFIG REQUIRED)

add_subdirectory(space_draw)

add_subdirectory(dump_space)